--- a/02_PrismDropNavigation/PrismDropNavigation/PrismDropNavigation.csproj
+++ b/02_PrismDropNavigation/PrismDropNavigation/PrismDropNavigation.csproj
@@ -50,8 +50,8 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Prism.Wpf.7.2.0.708-pre\lib\net45\System.Windows.Interactivity.dll</HintPath>
+    <Reference Include="System.Windows.Interactivity">
+      <HintPath>..\..\..\..\repos\_archive\HosoCoVMetro\HosoCoVMetro\InfrastructureAssemblies\System.Windows.Interactivity.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
