--- a/02_PrismDropNavigation/PrismDropNavigation.TabItem/PrismDropNavigation.TabItem.csproj
+++ b/02_PrismDropNavigation/PrismDropNavigation.TabItem/PrismDropNavigation.TabItem.csproj
@@ -95,12 +95,12 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Prism.Core">
-      <Version>7.2.0.708-pre</Version>
+      <Version>7.2.0.1367</Version>
     </PackageReference>
     <PackageReference Include="Prism.Unity">
-      <Version>7.2.0.708-pre</Version>
+      <Version>7.2.0.1367</Version>
     </PackageReference>
-    <PackageReference Include="Prism.Wpf" Version="7.2.0.708-pre" />
+    <PackageReference Include="Prism.Wpf" Version="7.2.0.1367" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
