--- a/04_OxyPlotInspector/OxyPlotInspector/packages.config
+++ b/04_OxyPlotInspector/OxyPlotInspector/packages.config
@@ -3,18 +3,18 @@
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net461" />
   <package id="OxyPlot.Core" version="2.0.0-unstable1035" targetFramework="net461" />
   <package id="OxyPlot.Wpf" version="2.0.0-unstable1035" targetFramework="net461" />
-  <package id="Prism.Core" version="7.2.0.708-pre" targetFramework="net461" />
-  <package id="Prism.Unity" version="7.2.0.708-pre" targetFramework="net461" />
-  <package id="Prism.Wpf" version="7.2.0.708-pre" targetFramework="net461" />
-  <package id="ReactiveProperty" version="5.3.2" targetFramework="net461" />
+  <package id="Prism.Core" version="7.2.0.1367" targetFramework="net461" />
+  <package id="Prism.Unity" version="7.2.0.1367" targetFramework="net461" />
+  <package id="Prism.Wpf" version="7.2.0.1367" targetFramework="net461" />
+  <package id="ReactiveProperty" version="5.6.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net461" />
   <package id="System.Drawing.Common" version="4.6.0-preview.18571.3" targetFramework="net461" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
-  <package id="System.Reactive" version="4.1.2" targetFramework="net461" />
+  <package id="System.Reactive" version="4.1.6" targetFramework="net461" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
-  <package id="Unity.Abstractions" version="3.3.1" targetFramework="net461" />
-  <package id="Unity.Container" version="5.8.12" targetFramework="net461" />
+  <package id="Unity.Abstractions" version="5.11.1" targetFramework="net461" />
+  <package id="Unity.Container" version="5.11.1" targetFramework="net461" />
 </packages>
