--- a/05_SwitchContext/SwitchContext2/SwitchContext2.csproj
+++ b/05_SwitchContext/SwitchContext2/SwitchContext2.csproj
@@ -139,9 +139,9 @@
     <PackageReference Include="OxyPlot.Wpf">
       <Version>2.0.0-unstable1035</Version>
     </PackageReference>
-    <PackageReference Include="Prism.Unity" Version="7.2.0.708-pre" />
+    <PackageReference Include="Prism.Unity" Version="7.2.0.1367" />
     <PackageReference Include="ReactiveProperty">
-      <Version>5.3.2</Version>
+      <Version>5.6.0</Version>
     </PackageReference>
     <PackageReference Include="System.ValueTuple">
       <Version>4.5.0</Version>
