--- a/06_Virtualization/VirtualizationListItems/VirtualizationListItems.csproj
+++ b/06_Virtualization/VirtualizationListItems/VirtualizationListItems.csproj
@@ -109,11 +109,11 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Prism.Core">
-      <Version>7.2.0.1347-pre</Version>
+      <Version>7.2.0.1367</Version>
     </PackageReference>
-    <PackageReference Include="Prism.Unity" Version="7.2.0.1347-pre" />
+    <PackageReference Include="Prism.Unity" Version="7.2.0.1367" />
     <PackageReference Include="Prism.Wpf">
-      <Version>7.2.0.1347-pre</Version>
+      <Version>7.2.0.1367</Version>
     </PackageReference>
     <PackageReference Include="ReactiveProperty">
       <Version>5.6.0</Version>
