--- a/07_WindowTheme/MetroRadianceWindow/packages.config
+++ b/07_WindowTheme/MetroRadianceWindow/packages.config
@@ -4,11 +4,12 @@
   <package id="MetroRadiance" version="2.3.0" targetFramework="net461" />
   <package id="MetroRadiance.Chrome" version="2.2.0" targetFramework="net461" />
   <package id="MetroRadiance.Core" version="2.4.0" targetFramework="net461" />
-  <package id="Prism.Core" version="7.2.0.1347-pre" targetFramework="net461" />
-  <package id="Prism.Unity" version="7.2.0.1347-pre" targetFramework="net461" />
-  <package id="Prism.Wpf" version="7.2.0.1347-pre" targetFramework="net461" />
+  <package id="Prism.Core" version="7.2.0.1367" targetFramework="net461" />
+  <package id="Prism.Unity" version="7.2.0.1367" targetFramework="net461" />
+  <package id="Prism.Wpf" version="7.2.0.1367" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
-  <package id="Unity.Abstractions" version="4.1.3" targetFramework="net461" />
-  <package id="Unity.Container" version="5.10.3" targetFramework="net461" />
+  <package id="Unity.Abstractions" version="5.11.1" targetFramework="net461" />
+  <package id="Unity.Container" version="5.11.1" targetFramework="net461" />
 </packages>
