--- a/ImageMetaExtractorApp/packages.config
+++ b/ImageMetaExtractorApp/packages.config
@@ -2,10 +2,11 @@
 <packages>
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net461" />
   <package id="MetadataExtractor" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.0.1" targetFramework="net461" />
   <package id="Prism.Core" version="7.2.0.1367" targetFramework="net461" />
   <package id="Prism.Unity" version="7.2.0.1367" targetFramework="net461" />
   <package id="Prism.Wpf" version="7.2.0.1367" targetFramework="net461" />
-  <package id="ReactiveProperty" version="5.6.0" targetFramework="net461" />
+  <package id="ReactiveProperty" version="6.0.3" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net461" />
   <package id="System.Reactive" version="4.1.6" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
