--- a/LibraryTestConsole/LibraryTestConsole.csproj
+++ b/LibraryTestConsole/LibraryTestConsole.csproj
@@ -55,6 +55,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ThosoImageWpf\ThosoImageWpf.csproj">
+      <Project>{023355A3-8C55-49EF-A5A1-D81DEFFE72A2}</Project>
+      <Name>ThosoImageWpf</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ThosoImage\ThosoImage.csproj">
       <Project>{9f6bee93-c0b6-4a55-88a6-b6dd1cdaef04}</Project>
       <Name>ThosoImage</Name>
