--- a/04_OxyPlotInspector/OxyPlotInspector/packages.config
+++ b/04_OxyPlotInspector/OxyPlotInspector/packages.config
@@ -7,8 +7,11 @@
   <package id="Prism.Unity" version="7.2.0.1367" targetFramework="net461" />
   <package id="Prism.Wpf" version="7.2.0.1367" targetFramework="net461" />
   <package id="ReactiveProperty" version="5.6.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net461" />
   <package id="System.Drawing.Common" version="4.6.0-preview.18571.3" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
   <package id="System.Reactive" version="4.1.6" targetFramework="net461" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
