--- a/06_Virtualization/VirtualizationListItems/VirtualizationListItems.csproj
+++ b/06_Virtualization/VirtualizationListItems/VirtualizationListItems.csproj
@@ -128,5 +128,8 @@
       <Name>ThosoImageWpf</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="capture.gif" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
