--- a/10_ImageMeta/ImageMetaExtractorApp/ImageMetaExtractorApp.csproj
+++ b/10_ImageMeta/ImageMetaExtractorApp/ImageMetaExtractorApp.csproj
@@ -181,6 +181,8 @@
       <Name>ImageMetaExtractor</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="capture.gif" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
