--- a/05_SwitchContext/SwitchContext2/SwitchContext2.csproj
+++ b/05_SwitchContext/SwitchContext2/SwitchContext2.csproj
@@ -157,6 +157,8 @@
       <Name>ThosoImage</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="capture.gif" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
