--- a/09_WPFGraphs/Graph2D_3/Graph2D_3.csproj
+++ b/09_WPFGraphs/Graph2D_3/Graph2D_3.csproj
@@ -118,5 +118,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="capture.gif" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
