--- a/06_Virtualization/VirtualizationListItems/VirtualizationListItems.csproj
+++ b/06_Virtualization/VirtualizationListItems/VirtualizationListItems.csproj
@@ -38,6 +38,7 @@
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
